# verdict

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES_v1.0.0.md  SECURITY.md  assay-demo-video-brief.md  ci-eval.yaml  debug_output.txt  handoff_evals_ml.md  implementation_plan_pr9_judge.md  index.html  junit.xml  live-judge-test.yaml  live-test.yaml  mkdocs.yml  otel.jsonl  run.json  sarif.json  sitemap.xml
.eval/: eval.db
.github/: PULL_REQUEST_TEMPLATE.md
1.1 change/: CHANGELOG.md  action.yml  release.yml  v1.1.0-implementation-plan.md
ADOPTION_SCOREBOARD/: index.html
ADR-002-Trace-Replay/: index.html
ADR-003-Gate-Semantics/: index.html
ADR-004-Judge-Metrics/: index.html
ADR-004-Scope-Keuzes-RAG-First/: index.html
ADR-005-Relative-Thresholds/: index.html
AGENTS/: index.html
CLI_REFERENCE/: index.html
CONFIG/: index.html
CONFIG_REFERENCE/: index.html
DEMO-SCRIPT/: index.html
DX pakket .8-1/: README.md  quickstart.md
DX_CONTRACT/: index.html
DX_CONTRACT_PYTHON_SDK/: index.html
HANDOFF-v0.2.0/: index.html
HANDOFF-v0.6.0/: index.html
MIGRATION/: index.html
RELEASE_PLAN_v0.2.x/: index.html
RELEASE_PLAN_v0.7.0/: index.html
RELEASE_PLAN_v0.7.0_DETAILED/: index.html
ROLLOUT_TEMPLATE/: index.html
STRATEGY-v0.7.0/: index.html
TROUBLESHOOTING/: index.html
agent_demo_2_fixes/: index.html
architecture/: index.html
archive/: ADR-001-Evals-CLI-Architectuur.docx  ADR-001-v2-Geconsolideerd.docx  Implementatieplan-Verdict-v2.docx  Implementatieplan-Verdict-v3-Herzien.docx  Implementatieplan-llm-eval-Week1-8.docx  RFC-001-Packaging-Strategie.docx  Verdict-Developer-Handoff-Start.docx
assay-action/: action.yml
assay-docs/: design-partner-pitch.md  mkdocs.yml
assay-python-sdk/: Cargo.toml
assay-python-sdk/python/: pyproject.toml
assay-python-sdk/python/assay/: __init__.py  coverage.py
assay-python-sdk/python/tests/: test_client.py  test_wrappers.py
assay-python-sdk/src/: lib.rs
benchmark_results/: benchmark_20251228_105922.json  sorted_20251228_105922.txt  timings_20251228_105922.txt
changelog/: index.html
cli/: index.html
concepts/: index.html
config/: index.html
contributing/: index.html
crates/assay-cli/: Cargo.toml
crates/assay-cli/src/: main.rs
crates/assay-cli/src/cli/: args.rs
crates/assay-cli/src/cli/commands/: baseline.rs  coverage.rs  doctor.rs  explain.rs  import.rs  migrate.rs  mod.rs  trace.rs  validate.rs
crates/assay-cli/src/cli/commands/experimental/: explain.rs
crates/assay-cli/tests/: coverage_threshold.rs  golden_runner.rs
crates/assay-core/: Cargo.toml
crates/assay-core/src/: config.rs  coverage.rs  explain.rs  fingerprint.rs  lib.rs  model.rs  on_error.rs  policy_engine.rs  thresholds.rs
crates/assay-core/src/agent_assertions/: matchers.rs  mod.rs  model.rs
crates/assay-core/src/baseline/: mod.rs
crates/assay-core/src/cache/: key.rs
crates/assay-core/src/config/: resolve.rs
crates/assay-core/src/doctor/: mod.rs  model.rs
crates/assay-core/src/engine/: runner.rs
crates/assay-core/src/experimental/: explain.rs
crates/assay-core/src/providers/: trace.rs
crates/assay-core/src/providers/llm/: mod.rs
crates/assay-core/src/report/: console.rs  junit.rs  sarif.rs
crates/assay-core/src/storage/: store.rs
crates/assay-core/src/trace/: precompute.rs
crates/assay-core/src/validate/: mod.rs
crates/assay-core/tests/: assertions_smoke.rs  baseline_determinism.rs  baseline_test.rs  cache_key_hardening.rs  compat_matrix.rs  config_versioning.rs  equivalence_test.rs  experimental.rs  explain_edges.rs  explain_integration.rs  latency_check.rs  mcp_import_smoke.rs  otel_ingest_smoke.rs  parity.rs  parity_batch_streaming.rs  storage_smoke.rs  trace_v2_upgrade.rs
crates/assay-core/tests/experimental/: edges.rs  explain.rs
crates/assay-mcp-server/: Cargo.toml
crates/assay-mcp-server/src/: cache.rs  config.rs  lib.rs  main.rs  security.rs  server.rs
crates/assay-mcp-server/src/tools/: check_args.rs  check_coverage.rs  check_sequence.rs  explain_trace.rs  mod.rs  policy_decide.rs
crates/assay-mcp-server/src/tools/experimental/: explain_trace.rs
crates/assay-mcp-server/tests/: coverage_integration.rs  dsl_v1_1_aliases.rs  dsl_v1_1_eventually.rs  dsl_v1_1_operators.rs  failsafe_logging.rs  resource_limits.rs  security.rs  stdio_e2e.rs  stdio_edge_cases.rs
crates/assay-metrics/: Cargo.toml
crates/assay-metrics/src/: args_valid.rs  json_schema.rs  judge.rs  lib.rs  must_contain.rs  must_not_contain.rs  regex_match.rs  semantic.rs  sequence_valid.rs  tool_blocklist.rs  usage.rs
crates/verdict-cli/: Cargo.toml
crates/verdict-cli/src/: main.rs  templates.rs
crates/verdict-cli/src/cli/: args.rs  commands.rs
crates/verdict-cli/src/cli/commands/: baseline.rs  mod.rs
crates/verdict-metrics/: Cargo.toml
crates/verdict-metrics/src/: json_schema.rs  judge.rs  lib.rs  semantic.rs
demo_assets/: demo.cast  mcp-eval.yaml  run_demo.sh  session.json
demo_dx_vision/: index.html
docs/: ADR-002-Trace-Replay.md  ADR-004-Judge-Metrics.md  ADR-005-Relative-Thresholds.md  CONFIG.md  DX_CONTRACT.md  HANDOFF-v0.6.0.md  RELEASE_PLAN_v0.7.0.md  RELEASE_PLAN_v0.7.0_DETAILED.md  STRATEGY-v0.7.0.md  index.md  (+7 more)
verdict-sdk/python/: CHANGELOG.md  README.md  pyproject.toml
verdict-sdk/python/examples/openai-demo/: README.md  openai_record_stream.py  record_async.py  record_sync.py  tools.py  verdict_async.yaml  verdict_stream.yaml
verdict-sdk/python/examples/openai-demo/traces/: openai.jsonl  openai_async.jsonl  openai_stream.jsonl
verdict-sdk/python/tests/: test_async.py  test_context.py  test_determinism.py  test_edge_cases.py  test_implicit_context.py  test_redaction.py  test_streaming.py
verdict-sdk/python/verdict_sdk/: __init__.py  __main__.py  async_openai.py  config_loader.py  doctor.py  openai_instrumentor.py  openai_stream_wrapper.py  openai_streaming.py  recorder.py  redaction.py  trace_reader.py  writer.py
verdict-sdk/python/verdict_sdk/judge/: openai_judge.py
verdict-sdk/python/verdict_sdk/mocks/: openai_stream_mock.py
(+274 files in other folders)
