[workspace]
resolver = "2"
members = [
  "crates/verdict-core",
  "crates/verdict-metrics",
  "crates/verdict-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/Rul1an/verdict"
authors = ["Verdict"]

[patch.crates-io]
verdict-core = { path = "crates/verdict-core" }
verdict-metrics = { path = "crates/verdict-metrics" }
