[package]
name = "assay-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "assay"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
serde_json = "1"

assay-core = { path = "../assay-core", version = "0.8.0" }
assay-metrics = { path = "../assay-metrics", version = "0.8.0" }
chrono = "0.4.42"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
