[package]
name = "assay-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "High-performance evaluation framework for LLM agents (Core)"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["sync", "time", "macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12.26", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4.3"
md5 = "0.8.0"
strsim = "0.11.1"
serde_ignored = "0.1.14"
jsonschema = "0.19"
regex = "1.5"
tracing = "0.1.44"

[dev-dependencies]
tempfile = "3.23.0"
rusqlite = { version = "0.31", features = ["bundled"] }
