[package]
name = "assay-mcp-server"
version = "0.8.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full", "fs"] }
jsonschema = "0.19"
assay-core = { path = "../assay-core" }
assay-metrics = { path = "../assay-metrics" }
sha2 = "0.10"
hex = "0.4"
moka = { version = "0.12", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "time"] }

[dev-dependencies]
anyhow = "1.0"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
# uuid = { version = "1.0", features = ["v4"] } # Removed in favor of SystemTime
