[package]
name = "assay-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
assay-core = { path = "../assay-core", version = "0.8.0-rc.1" }
regex = "1"
jsonschema = "0.19"
serde_yaml = "0.9"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
