[package]
name = "assay-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Metrics library for Assay"

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
assay-core = { path = "../assay-core", version = "1.0.0" }
regex = "1"
jsonschema = "0.19"
serde_yaml = "0.9"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
