[package]
name = "verdict-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "verdict"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std", "io-util", "fs"] }
serde_json = "1"

verdict-core = { version = "0.1.0" }
verdict-metrics = { version = "0.1.0" }
chrono = "0.4.42"
