[package]
name = "verdict-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
serde_json = "1"
verdict-core = { path = "../verdict-core", version = "0.5.0" }
regex = "1"
jsonschema = "0.19"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
