[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "verdict-sdk"
version = "0.3.0"
description = "Python SDK for Verdict - Deterministic Regression Gating"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
  { name = "Verdict", email = "hello@verdict.dev" },
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "mypy",
]
openai = ["openai>=1.0.0"]

[tool.hatch.build.targets.wheel]
packages = ["verdict_sdk"]
